<resources>
    <string name="app_name">Easy Project</string>
    <string name="loading">loading</string>
    <string name="student_sid">Student SID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="creator_text">Creator:</string>
    <string name="join_text">Join</string>
    <string name="cancel_text">Cancel</string>
    <string name="member_text">Member:</string>
    <string name="number_text">Number:</string>
    <string name="create_project">Create Project</string>
    <string name="project_title_text">Project title:</string>
    <string name="max_number_text">Max number:</string>
    <string name="create_text">Create</string>
    <string name="title_activity_func_drawer">FuncDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="course_code_text">Course code:</string>
    <string name="camera_text">Camera</string>
    <string name="take_text">Take</string>
    <string name="project_description_text">Project description:</string>
</resources>
