<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:background="@color/colorLihkgBackground">

    <View
        android:id="@+id/backgroundView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@color/colorLihkgBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/projectTitle"
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:text="@string/loading"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/colorLihkgYellow"
        android:textSize="24sp"
        android:background="@drawable/numview_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/project_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:lines="3"
        android:maxLines="3"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:textColor="@color/colorLihkgBlackText"
        android:background="@color/colorLihkgWhiteText"
        android:text="@string/loading"
        app:layout_constraintTop_toBottomOf="@+id/projectTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/course_code_text" />

    <TextView
        android:id="@+id/course_code_text"
        android:layout_width="110sp"
        android:layout_height="wrap_content"
        android:text="@string/course_code_text"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@+id/project_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/course_code" />

    <TextView
        android:id="@+id/course_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:gravity="start"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/project_desc"
        app:layout_constraintStart_toEndOf="@+id/course_code_text" />

    <TextView
        android:id="@+id/creator_text"
        android:layout_width="110sp"
        android:layout_height="wrap_content"
        android:text="@string/creator_text"
        android:textColor="@color/colorWhite"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@+id/course_code_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/creator_name" />

    <TextView
        android:id="@+id/creator_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:gravity="start"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@+id/course_code"
        app:layout_constraintStart_toEndOf="@+id/creator_text" />

    <TextView
        android:id="@+id/number_text"
        android:layout_width="110sp"
        android:layout_height="wrap_content"
        android:text="@string/number_text"
        android:textColor="@color/colorWhite"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@+id/creator_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/creator_name" />

    <TextView
        android:id="@+id/member_num"
        android:layout_width="110sp"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@+id/creator_name"
        app:layout_constraintStart_toEndOf="@+id/number_text" />

    <TextView
        android:id="@+id/member_text"
        android:layout_width="110sp"
        android:layout_height="wrap_content"
        android:text="@string/member_text"
        android:textColor="@color/colorWhite"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@+id/number_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/member_name" />

    <TextView
        android:id="@+id/member_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textColor="@color/colorWhite"
        android:maxLines="10"
        app:layout_constraintTop_toBottomOf="@+id/member_num"
        app:layout_constraintStart_toEndOf="@+id/number_text" />

    <Button
        android:id="@+id/join_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/join_text"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundView"
        app:layout_constraintRight_toLeftOf="@+id/cancel_btn"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_text"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/join_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>