<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300sp"
    android:background="@color/colorLihkgBackground">

    <View
        android:id="@+id/backgroundView"
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:background="@color/colorGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/windowTitle"
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:text="@string/create_project"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/colorLihkgYellow"
        android:textSize="24sp"
        android:background="@drawable/title_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/project_title_text"
        android:layout_width="100sp"
        android:paddingHorizontal="10sp"
        android:layout_height="wrap_content"
        android:text="@string/project_title_text"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="10sp"
        app:layout_constraintTop_toBottomOf="@+id/windowTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/project_title" />

    <EditText
        android:id="@+id/project_title"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="10sp"
        android:background="@color/colorLihkgWhiteText"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/project_title_text"
        app:layout_constraintTop_toBottomOf="@+id/windowTitle"
        android:labelFor="@+id/project_title"/>

    <TextView
        android:id="@+id/project_desc_text"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:text="@string/project_description_text"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="15sp"
        android:paddingHorizontal="10sp"
        app:layout_constraintTop_toBottomOf="@+id/project_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/project_desc" />

    <EditText
        android:id="@+id/project_desc"
        android:layout_width="300sp"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="15sp"
        android:layout_height="wrap_content"
        android:background="@color/colorLihkgWhiteText"
        android:lines="3"
        android:maxLines="3"
        android:textColor="@color/colorLihkgBlackText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/project_desc_text"
        app:layout_constraintTop_toBottomOf="@+id/project_title_text"
        android:labelFor="@+id/project_desc" />

    <TextView
        android:id="@+id/max_num_text"
        android:layout_width="100sp"
        android:layout_marginStart="10sp"
        android:layout_height="wrap_content"
        android:text="@string/max_number_text"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="10sp"
        app:layout_constraintTop_toBottomOf="@+id/project_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/project_title" />

    <EditText
        android:id="@+id/max_num"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="10sp"
        android:background="@color/colorLihkgWhiteText"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/project_title_text"
        app:layout_constraintTop_toBottomOf="@+id/project_desc"
        android:labelFor="@+id/max_num" />

    <Button
        android:id="@+id/create_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/create_text"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundView"
        app:layout_constraintRight_toLeftOf="@+id/cancel_btn"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_text"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/create_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>