<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="450sp"
    android:background="@color/colorLihkgBackground">

    <View
        android:id="@+id/backgroundView"
        android:layout_width="match_parent"
        android:layout_height="450sp"
        android:background="@color/colorGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/windowTitle"
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:text="@string/camera_text"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/colorLihkgYellow"
        android:textSize="24sp"
        android:background="@drawable/title_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cam_view"
        android:layout_width="350sp"
        android:layout_height="350sp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/windowTitle" />

    <Button
        android:id="@+id/take_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/take_text"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundView"
        app:layout_constraintRight_toLeftOf="@+id/cancel_btn"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_text"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/take_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>