<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorBlack">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="50sp"
        android:typeface="serif"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_sid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:ems="10"
        android:layout_marginBottom="10sp"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@+id/sid_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/password_text" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:ems="10"
        android:layout_marginBottom="22sp"
        android:inputType="textPassword"
        app:layout_constraintLeft_toRightOf="@+id/password_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/login_btn" />

    <TextView
        android:id="@+id/sid_text"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:background="@drawable/main_border"
        android:text="@string/student_sid"
        android:paddingLeft="7sp"
        android:layout_marginBottom="10sp"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/user_sid"
        app:layout_constraintBottom_toTopOf="@+id/user_password" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:text="@string/password"
        android:background="@drawable/main_border"
        android:paddingLeft="7sp"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/user_password"
        app:layout_constraintBottom_toTopOf="@+id/login_btn" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:onClick="loginClick"
        android:layout_marginBottom="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/icon_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_logo"
        android:layout_marginTop="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>